--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ font-style: italic;
   background-repeat: no-repeat;
   background-size: cover;
 }
-ol{
+.six{
   font-weight: bold;
+  border:5px solid #055e8b;
+  background-color: #058b8b;
 }
